# QuickRelease

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  git.rs  github.rs  language.rs  main.rs  utils.rs  version.rs
src/implementations/: js.rs  kotlin.rs  mod.rs
